# POptUS

./: .gitignore  .readthedocs.yml  LICENSE  README.md  ths_has_a_typo.txt  typos.toml
.github/workflows/: build_docs.yml  check_spelling.yml  check_standards.yml  measure_coverage.yml  publish_book.yml  release.yml  setup_tox_github_action.sh  test_book.yml  test_sdist.yml
book/: _config.yml  _toc.yml  intro.md
book/notebooks/: FileLoggerExample.ipynb  FullDevExample.ipynb  SimpleUserExample.ipynb  StdLoggerExample.ipynb  TwoLoggersExample.ipynb  log_messages.py  my_method.py  my_model.py  print_file.py
docs/: advanced_api.rst  api.rst  conf.py  contributing.rst  documentation.rst  get_started.rst  index.rst  logging.rst  sphinx_macros.json  tox_usage.rst
poptus_pypkg/: .coveragerc  .flake8  pyproject.toml  tox.ini
poptus_pypkg/src/poptus/: .readthedocs.yml  AbstractLogger.py  FileLogger.py  StandardLogger.py  __init__.py  _constants.py  create_log_functions.py  create_logger.py  load_tests.py  test.py
poptus_pypkg/src/poptus/tests/: TestAbstractLogger.py  TestCreateLogFunctions.py  TestCreateLogger.py  TestFileLogger.py  TestStandardLogger.py  TestTemplate.py
