[build-system]
# Minimum setuptools* versions suggested by setuptools-scm v9.2.0 docs
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# Package version managed automatically by setuptools-scm based on git tags
dynamic = ["version"]

name        = "poptus"
description = "Practical Optimization Under Structure"
readme      = "README.md"

authors = [
    {name = "Jeffrey Larson",  email = "jmlarson@anl.gov"},
    {name = "Matt Menickelly", email = "mmenickelly@anl.gov"},
    {name = "Jared O'Neal", email = "joneal@anl.gov"},
    {name = "Stefan M. Wild",  email = "wild@lbl.gov"}
]
maintainers = [
    {name = "Jared O'Neal", email = "joneal@anl.gov"}
]

license       = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.9"
dependencies = []

keywords = ["POptUS"]
classifiers=[
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Repository    = "https://github.com/POptUS/POptUS"
Documentation = "http://POptUS.readthedocs.io"
Issues        = "https://github.com/POptUS/POptUS/issues"

# Since we are using setuptools-scm, which likes to add everything to
# distributions, the actual contents should be confirmed directly and
# MANIFEST.in might beat out specifications here.
[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where      = ["src"]
namespaces = true
